# Solana-Presale-Smart-Contract

./: README.md  README.md.  add.txt
Palm-presale-project(contract)/: Anchor.toml  id.json  package-lock.json  package.json  tsconfig.json
Palm-presale-project(contract)/palm-presale/: Cargo.toml
Palm-presale-project(contract)/palm-presale/src/: lib.rs
Palm-presale-project(contract)/palm-presale/src/constants/: constants.rs
Palm-presale-project(contract)/palm-presale/src/errors/: errors.rs
Palm-presale-project(contract)/palm-presale/src/instructions/: buy_token.rs  claim_token.rs  create_presale.rs  deposit_token.rs  mod.rs  start_presale.rs  update_presale.rs  withdraw_sol.rs  withdraw_token.rs
Palm-presale-project(contract)/palm-presale/src/state/: presale_info.rs  user_info.rs
Palm-presale-project(contract)/programs/palm-presale/src/: lib.rs
Palm-presale-project(contract)/programs/palm-presale/src/constants/: constants.rs  mod.rs
Palm-presale-project(contract)/programs/palm-presale/src/errors/: mod.rs
Palm-presale-project(contract)/programs/palm-presale/src/instructions/: buy_token.rs  claim_token.rs  deposit_token.rs  start_presale.rs  update_presale.rs  withdraw_sol.rs  withdraw_token.rs
Palm-presale-project(contract)/programs/palm-presale/src/state/: mod.rs
Palm-presale-project(contract)/tests/: palm-presale.ts
Palm-presale-project(contract)/tests/wallets/: admin.json
